Added env requirement

--- a/Preprocessing.ipynb
+++ b/Preprocessing.ipynb
@@ -855,165 +855,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 172,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10s\n",
-      "--2016\n",
-      "--2017\n",
-      "--2018\n",
-      "--2019\n",
-      "--2020\n",
-      "--2021\n",
-      "1T\n",
-      "--2016\n",
-      "--2017\n",
-      "--2018\n",
-      "--2019\n",
-      "--2020\n",
-      "--2021\n",
-      "5T\n",
-      "--2016\n",
-      "--2017\n",
-      "--2018\n",
-      "--2019\n",
-      "--2020\n",
-      "--2021\n",
-      "10T\n",
-      "--2016\n",
-      "--2017\n",
-      "--2018\n",
-      "--2019\n",
-      "--2020\n",
-      "--2021\n",
-      "15T\n",
-      "--2016\n",
-      "--2017\n",
-      "--2018\n",
-      "--2019\n",
-      "--2020\n",
-      "--2021\n",
-      "30T\n",
-      "--2016\n",
-      "--2017\n",
-      "--2018\n",
-      "--2019\n",
-      "--2020\n",
-      "--2021\n",
-      "45T\n",
-      "--2016\n",
-      "--2017\n",
-      "--2018\n",
-      "--2019\n",
-      "--2020\n",
-      "--2021\n",
-      "1H\n",
-      "--2016\n",
-      "--2017\n",
-      "--2018\n",
-      "--2019\n",
-      "--2020\n",
-      "--2021\n",
-      "2H\n",
-      "--2016\n",
-      "--2017\n",
-      "--2018\n",
-      "--2019\n",
-      "--2020\n",
-      "--2021\n",
-      "4H\n",
-      "--2016\n",
-      "--2017\n",
-      "--2018\n",
-      "--2019\n",
-      "--2020\n",
-      "--2021\n",
-      "6H\n",
-      "--2016\n",
-      "--2017\n",
-      "--2018\n",
-      "--2019\n",
-      "--2020\n",
-      "--2021\n",
-      "12H\n",
-      "--2016\n",
-      "--2017\n",
-      "--2018\n",
-      "--2019\n",
-      "--2020\n",
-      "--2021\n",
-      "24H\n",
-      "--2016\n",
-      "--2017\n",
-      "--2018\n",
-      "--2019\n",
-      "--2020\n",
-      "--2021\n",
-      "48H\n",
-      "--2016\n",
-      "--2017\n",
-      "--2018\n",
-      "--2019\n",
-      "--2020\n",
-      "--2021\n",
-      "72H\n",
-      "--2016\n",
-      "--2017\n",
-      "--2018\n",
-      "--2019\n",
-      "--2020\n",
-      "--2021\n",
-      "4D\n",
-      "--2016\n",
-      "--2017\n",
-      "--2018\n",
-      "--2019\n",
-      "--2020\n",
-      "--2021\n",
-      "5D\n",
-      "--2016\n",
-      "--2017\n",
-      "--2018\n",
-      "--2019\n",
-      "--2020\n",
-      "--2021\n",
-      "6D\n",
-      "--2016\n",
-      "--2017\n",
-      "--2018\n",
-      "--2019\n",
-      "--2020\n",
-      "--2021\n",
-      "7D\n",
-      "--2016\n",
-      "--2017\n",
-      "--2018\n",
-      "--2019\n",
-      "--2020\n",
-      "--2021\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
-    "sampling_frequencies = [\"1T\", \"5T\", \"10T\", \"15T\", #Removed 10s to be able to push to Git\n",
-    "                        \"30T\", \"45T\", \"1H\", \"2H\", \"4H\", \n",
-    "                        \"6H\", \"12H\", \"24H\", \"48H\", \"72H\",\n",
-    "                        \"4D\", \"5D\", \"6D\", \"7D\"]\n",
-    "sampling_frequencies_eng = [\"1mn\", \"5mn\", \"10mn\", \"15mn\", #Removed 10s to be able to push to Git\n",
-    "                            \"30mn\", \"45mn\", \"1h\", \"2h\", \"4h\", \n",
-    "                            \"6h\", \"12h\", \"24h\", \"48h\", \"72h\", \n",
-    "                            \"4days\", \"5days\", \"6days\", \"7days\"]\n",
+    "sampling_frequencies = [\"15T\", \"30T\", \"45T\", \"1H\", \"2H\", \n",
+    "                        \"4H\", \"6H\", \"12H\", \"24H\", \"48H\", \n",
+    "                        \"72H\", \"4D\", \"5D\", \"6D\", \"7D\"]\n",
+    "\n",
+    "sampling_frequencies_eng = [\"15_minutes\", \"30_minutes\", \"45_minutes\", \"1_hour\", \"2_hours\", \n",
+    "                            \"4_hours\", \"6_hours\", \"12_hours\", \"24_hours\", \"48_hours\", \n",
+    "                            \"72_hours\", \"4_days\", \"5_days\", \"6_days\", \"7_days\"]\n",
     "\n",
     "root = \"./GHI_dataset/cleaned_sampled/\"\n",
     "\n",
     "for i, frequency in enumerate(sampling_frequencies):\n",
     "\n",
-    "    print(frequency)\n",
     "    \n",
     "    df_sampled_temp = GHI_df.resample(frequency).mean().copy()\n",
     "    df_sampled_temp = df_sampled_temp.dropna()\n",
@@ -1022,28 +880,10 @@
     "    df_sampled_temp['year'] = df_sampled_temp['datetime'].dt.year\n",
     "    years = df_sampled_temp['year'].unique()\n",
     "\n",
-    "    path_freq = os.path.join(root, frequency)\n",
-    "    os.mkdir(path_freq)\n",
-    "\n",
-    "    # Loop over each year and export the data\n",
-    "    for year in years:\n",
-    "        \n",
-    "        print(\"--\" + str(year))\n",
-    "        path_year = os.path.join(path_freq, str(year))\n",
-    "        os.mkdir(path_year)\n",
-    "    \n",
-    "        file_path= path_year + '/GHI_sampled_' + str(frequency) + '_' + str(year) + '.csv'\n",
-    "\n",
-    "        df_year = df_sampled_temp[df_sampled_temp['year'] == year]\n",
-    "        df_year.to_csv(file_path, index=False)"
+    "    file_path= root + '/GHI_sampled_' + str(sampling_frequencies_eng[i]) + '.csv'\n",
+    "    df_sampled_temp.to_csv(file_path, index=False)\n",
+    "    "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
